Fixed queries stuck

--- a/src/components/popups/context-menu.css
+++ b/src/components/popups/context-menu.css
@@ -2,6 +2,7 @@
   min-width: 180px;
   padding: 10px 0;
   background-color: rgb(var(--bg-popover) / 1);
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / .3), 0 2px 4px -2px rgb(0 0 0 / .3), 0 -2px 4px -2px rgb(0 0 0 / .3);
   border-radius: .5rem;
   overflow: hidden;
 
